--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -11,45 +11,47 @@
       <app-reporting></app-reporting>
       <div class="message-display" (click)="errorMessage=''; successMessage=''">
         <div class="alert-danger mat-elevation-z4"
-        [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
+             [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{ errorMessage }}
+        </div>
         <div class="alert-success mat-elevation-z4"
-        [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
+             [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{ successMessage }}
+        </div>
       </div>
       <mat-form-field appearance="outline">
         <mat-label>Filter Text</mat-label>
         <input matInput type="text"
-          name="uniquename"
-          #filter
-          (keyup)="updateFilter()"
-          matTooltip="Enter a search term to filter the list"
-          matTooltipClass="tooltip"
-          placeholder="Filter">
+               name="uniquename"
+               #filter
+               (keyup)="updateFilter()"
+               matTooltip="Enter a search term to filter the list"
+               matTooltipClass="tooltip"
+               placeholder="Filter">
         <!-- This invisible input is to prevent the filter input from being assigned user names from the browsers saved  credential pop-up-->
         <input matInput type="text"
-          style="width: 0; height: 0">
+               style="width: 0; height: 0">
       </mat-form-field>
       <mat-checkbox class="filter-checkbox"
-        [color]="'primary'"
-        matTooltip="Only show rows for accounts where the NVR is offline"
-        matTooltipClass="tooltip"
-        (change)="onlyNVROffline($event)">Only NVR Offline
+                    [color]="'primary'"
+                    matTooltip="Only show rows for accounts where the NVR is offline"
+                    matTooltipClass="tooltip"
+                    (change)="onlyNVROffline($event)">Only NVR Offline
       </mat-checkbox>
       <mat-checkbox class="filter-checkbox" [color]="'primary'"
-        matTooltip="Only show rows for NVRs where no account has yet been created"
-        matTooltipClass="tooltip"
-        (change)="noAccountOnly($event)">Only No Account
+                    matTooltip="Only show rows for NVRs where no account has yet been created"
+                    matTooltipClass="tooltip"
+                    (change)="noAccountOnly($event)">Only No Account
       </mat-checkbox>
       <table matSort mat-table class="mat-elevation-z8"
-        (matSortChange)="changeSorting($event)"
-        [dataSource]="accounts | sort:sortActive:sortDirection | filter:filterText:bOnlyNVROffline.toString():bNoAccountOnly.toString()"
-        multiTemplateDataRows>
+             (matSortChange)="changeSorting($event)"
+             [dataSource]="accounts | sort:sortActive:sortDirection | filter:filterText:bOnlyNVROffline.toString():bNoAccountOnly.toString()"
+             multiTemplateDataRows>
         <ng-container matColumnDef="changePassword">
           <th mat-header-cell *matHeaderCellDef>Change Password</th>
           <td class="buttons" mat-cell *matCellDef="let account">
             <button mat-icon-button matTooltip="Change the password for this account" matTooltipClass="tooltip"
-              color="warn"
-              [disabled]="!account.accountCreated"
-              (click)="showChangePasswordForm(account)">
+                    color="warn"
+                    [disabled]="!account.accountCreated"
+                    (click)="showChangePasswordForm(account)">
               <mat-icon>security</mat-icon>
             </button>
           </td>
@@ -58,9 +60,9 @@
           <th mat-header-cell *matHeaderCellDef>Change Email Address</th>
           <td class="buttons" mat-cell *matCellDef="let account">
             <button mat-icon-button matTooltip="Change the email address for this account" matTooltipClass="tooltip"
-              color="warn"
-              [disabled]="!account.accountCreated"
-              (click)="showChangeEmailForm(account)">
+                    color="warn"
+                    [disabled]="!account.accountCreated"
+                    (click)="showChangeEmailForm(account)">
               <mat-icon>email</mat-icon>
             </button>
           </td>
@@ -69,12 +71,12 @@
           <th mat-header-cell *matHeaderCellDef>Enable/Disable Account</th>
           <td class="check-box" mat-cell *matCellDef="let account">
             <mat-checkbox color="accent"
-              [matTooltip]="(account.accountEnabled ? 'Disable':'Re-enable') + ' this account'"
-              matTooltipClass="tooltip"
-              [checked]="account.accountEnabled"
-              [disabled]="!account.accountCreated"
-              (change)="setAccountEnabledStatus(account, $event)">
-              {{account.accountEnabled ? "Enabled" : "Disabled"}}
+                          [matTooltip]="(account.accountEnabled ? 'Disable':'Re-enable') + ' this account'"
+                          matTooltipClass="tooltip"
+                          [checked]="account.accountEnabled"
+                          [disabled]="!account.accountCreated"
+                          (change)="setAccountEnabledStatus(account, $event)">
+              {{ account.accountEnabled ? "Enabled" : "Disabled" }}
             </mat-checkbox>
           </td>
         </ng-container>
@@ -82,21 +84,21 @@
           <th mat-header-cell *matHeaderCellDef>Delete Account</th>
           <td class="delete-button" mat-cell *matCellDef="let account">
             <button mat-icon-button matTooltip="Delete this account"
-              matTooltipClass="tooltip"
-              color="warn"
-              [disabled]="!account.accountCreated"
-              (click)="confirmDelete(account)">
+                    matTooltipClass="tooltip"
+                    color="warn"
+                    [disabled]="!account.accountCreated"
+                    (click)="confirmDelete(account)">
               <mat-icon>delete_forever</mat-icon>
             </button>
           </td>
         </ng-container>
         <ng-container matColumnDef="productId">
           <th mat-sort-header="productId" *matHeaderCellDef
-            matTooltip="Sort by productId"
-            matTooltipClass="tooltip">ProductId
+              matTooltip="Sort by productId"
+              matTooltipClass="tooltip">ProductId
           </th>
           <td mat-cell class="product-id" *matCellDef="let account; let i = dataIndex">
-            {{account.productId}}
+            {{ account.productId }}
           </td>
         </ng-container>
         <ng-container matColumnDef="accountCreated">
@@ -106,34 +108,34 @@
               matTooltip="{{account.accountCreated?'An account has been created':'No account has yet been created'}}"
               matTooltipClass="tooltip"
               [ngClass]="account.accountCreated?'status-ok':'status-warn'">
-              {{account.accountCreated ? 'account_circle' : 'notification_important'}}
+              {{ account.accountCreated ? 'account_circle' : 'notification_important' }}
             </mat-icon>
           </td>
         </ng-container>
         <ng-container matColumnDef="userName">
           <th mat-sort-header="username" *matHeaderCellDef
-            matTooltip="Sort by userId"
-            matTooltipClass="tooltip">Username
+              matTooltip="Sort by userId"
+              matTooltipClass="tooltip">Username
           </th>
           <td mat-cell *matCellDef="let account; let i = dataIndex">
-            {{account.userName}}
+            {{ account.userName }}
           </td>
         </ng-container>
         <ng-container matColumnDef="nvrConnected">
           <th mat-header-cell *matHeaderCellDef>NVR Connected</th>
           <td mat-cell *matCellDef="let account; let i = dataIndex">
             <mat-icon matTooltip="{{account.nvrConnected?'NVR is connected':'NVR is not connected'}}"
-              matTooltipClass="tooltip"
-              [ngClass]="account.nvrConnected?'status-ok':'status-warn'">
-              {{account.nvrConnected ? 'sync' : 'sync_problem'}}
+                      matTooltipClass="tooltip"
+                      [ngClass]="account.nvrConnected?'status-ok':'status-warn'">
+              {{ account.nvrConnected ? 'sync' : 'sync_problem' }}
             </mat-icon>
           </td>
         </ng-container>
         <!-- Expanded  Column -->
         <ng-container matColumnDef="expandedEditRow">
           <td mat-cell *matCellDef="let account" [attr.colspan]="displayedColumns.length">
-            <div class="edit-element-detail mat-elevation-z10"
-              [@detailExpand]="account == expandedElement ? 'expanded' : 'collapsed'">
+            <div #elementDetail class="edit-element-detail mat-elevation-z10"
+                 [style]="UtilsService.expandableStreamStyle(account===expandedElement, elementDetail)">
               <table [dataSource]="[account]" mat-table class="mat-elevation-z10">
                 <ng-container matColumnDef="password">
                   <th mat-header-cell *matHeaderCellDef>password</th>
@@ -145,35 +147,35 @@
                           <div>
                             <mat-form-field appearance="outline" aria-autocomplete="none">
                               <input matInput type="password"
-                                [formControl]="getFormControl(changePasswordForm, 'password')"
-                                autocomplete="new-password"
-                                matTooltip="Enter new password for user {{acc.userName}}"
-                                matTooltipClass="tooltip"
-                                placeholder="New Password">
+                                     [formControl]="getFormControl(changePasswordForm, 'password')"
+                                     autocomplete="new-password"
+                                     matTooltip="Enter new password for user {{acc.userName}}"
+                                     matTooltipClass="tooltip"
+                                     placeholder="New Password">
                               <mat-label>New password for user {{ acc.userName }}</mat-label>
                             </mat-form-field>
                           </div>
                           <mat-form-field appearance="outline" aria-autocomplete="none">
                             <input matInput type="password"
-                              [formControl]="getFormControl(changePasswordForm, 'confirmPassword')"
-                              autocomplete="new-password"
-                              matTooltip="Confirm new password"
-                              matTooltipClass="tooltip"
-                              placeholder="Confirm New Password">
+                                   [formControl]="getFormControl(changePasswordForm, 'confirmPassword')"
+                                   autocomplete="new-password"
+                                   matTooltip="Confirm new password"
+                                   matTooltipClass="tooltip"
+                                   placeholder="Confirm New Password">
                             <mat-label>Confirm New password</mat-label>
                           </mat-form-field>
                           <div>
                             <button color="cancel" mat-raised-button (click)="showChangePasswordForm(acc)"
-                              matTooltip="Close the change password form"
-                              matTooltipClass="tooltip">
+                                    matTooltip="Close the change password form"
+                                    matTooltipClass="tooltip">
                               Cancel
                             </button>
                             <span>&nbsp;&nbsp;</span>
                             <button color="warn" mat-raised-button
-                              [disabled]="anyInvalid() || successMessage != ''"
-                              (click)="changePassword(acc)"
-                              matTooltip="Save the change to the {{acc.username}} account password"
-                              matTooltipClass="tooltip">
+                                    [disabled]="anyInvalid() || successMessage != ''"
+                                    (click)="changePassword(acc)"
+                                    matTooltip="Save the change to the {{acc.username}} account password"
+                                    matTooltipClass="tooltip">
                               Reset Password
                             </button>
                           </div>
@@ -187,34 +189,34 @@
                           <div>
                             <mat-form-field appearance="outline" class="email-input">
                               <input matInput type="text" [formControl]="getFormControl(changeEmailForm, 'email')"
-                                maxlength="70"
-                                matTooltip="Enter new email address for user {{acc.userName}}"
-                                matTooltipClass="tooltip"
-                                placeholder="New Email Address">
+                                     maxlength="70"
+                                     matTooltip="Enter new email address for user {{acc.userName}}"
+                                     matTooltipClass="tooltip"
+                                     placeholder="New Email Address">
                               <mat-label>New Email Address For User {{ acc.userName }}</mat-label>
                             </mat-form-field>
                           </div>
                           <mat-form-field appearance="outline" class="email-input">
                             <input matInput type="text"
-                              [formControl]="getFormControl(changeEmailForm, 'confirmEmail')"
-                              maxlength="70"
-                              matTooltip="Confirm new email address"
-                              matTooltipClass="tooltip"
-                              placeholder="Confirm New Email Address">
+                                   [formControl]="getFormControl(changeEmailForm, 'confirmEmail')"
+                                   maxlength="70"
+                                   matTooltip="Confirm new email address"
+                                   matTooltipClass="tooltip"
+                                   placeholder="Confirm New Email Address">
                             <mat-label>Confirm New Email Address</mat-label>
                           </mat-form-field>
                           <div>
                             <button color="cancel" mat-raised-button (click)="showChangeEmailForm(acc)"
-                              matTooltip="Close the change email address form"
-                              matTooltipClass="tooltip">
+                                    matTooltip="Close the change email address form"
+                                    matTooltipClass="tooltip">
                               Cancel
                             </button>
                             <span>&nbsp;&nbsp;</span>
                             <button color="warn" mat-raised-button
-                              [disabled]="anyInvalidEmail() || successMessage != ''"
-                              (click)="changeEmail(acc)"
-                              matTooltip="Save the change to the {{acc.username}} account email address"
-                              matTooltipClass="tooltip">
+                                    [disabled]="anyInvalidEmail() || successMessage != ''"
+                                    (click)="changeEmail(acc)"
+                                    matTooltip="Save the change to the {{acc.username}} account email address"
+                                    matTooltipClass="tooltip">
                               Change Email Address
                             </button>
                           </div>
@@ -227,40 +229,40 @@
                         <mat-card-content>
                           <span>
                             <button color="cancel" mat-raised-button (click)="confirmDelete(acc)"
-                              matTooltip="Close the delete account form, and leave the account active"
-                              matTooltipClass="tooltip">
+                                    matTooltip="Close the delete account form, and leave the account active"
+                                    matTooltipClass="tooltip">
                               Cancel
                             </button>
                             <span>&nbsp;&nbsp;</span>
                             <button color="warn" mat-raised-button
-                              (click)="deleteAccount(acc)"
-                              matTooltip="Delete the {{acc.username}} account"
-                              matTooltipClass="tooltip">
+                                    (click)="deleteAccount(acc)"
+                                    matTooltip="Delete the {{acc.username}} account"
+                                    matTooltipClass="tooltip">
                               Delete Account
                             </button>
                           </span>
                         </mat-card-content>
                       </mat-card>
                       <br>
-                      }
-                    </td>
-                  </ng-container>
-                  <!--              <tr mat-header-row *matHeaderRowDef="changePasswordColumns"></tr>-->
-                  <tr mat-row *matRowDef="let row; columns: changePasswordColumns;"></tr>
-                </table>
-              </div>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="usersConnected">
-            <th mat-header-cell *matHeaderCellDef>Users Connected</th>
-            <td mat-cell *matCellDef="let account; let i = dataIndex">
-              {{account.usersConnected}}
-            </td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          <tr mat-row *matRowDef="let e; columns: ['expandedEditRow']" class="edit-detail-row">
-          </table>
-        </mat-card-content>
-      }
-    </mat-card>
+                    }
+                  </td>
+                </ng-container>
+                <!--              <tr mat-header-row *matHeaderRowDef="changePasswordColumns"></tr>-->
+                <tr mat-row *matRowDef="let row; columns: changePasswordColumns;"></tr>
+              </table>
+            </div>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="usersConnected">
+          <th mat-header-cell *matHeaderCellDef>Users Connected</th>
+          <td mat-cell *matCellDef="let account; let i = dataIndex">
+            {{ account.usersConnected }}
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let e; columns: ['expandedEditRow']" class="edit-detail-row">
+      </table>
+    </mat-card-content>
+  }
+</mat-card>
