--- a/cloudFrontEnd/src/app/config-setup/config-setup.component.html
+++ b/cloudFrontEnd/src/app/config-setup/config-setup.component.html
@@ -355,7 +355,7 @@ can be found in the LICENSE file at http://angular.io/license -->
         <!-- Expanded Streams rows - The streams row is made up of this one column that spans across all columns -->
         <ng-container matColumnDef="expandedStreamDetail">
           <td *matCellDef="let cam; let camIndex=dataIndex" [attr.colspan]="cameraColumns.length" mat-cell>
-            <div #streams [style]="expandableStreamStyle(cam.value === expandedElement, streams)"
+            <div #streams [style]="UtilsService.expandableStreamStyle(cam.value === expandedElement, streams)"
                  class="element-detail mat-elevation-z10">
               <table [dataSource]="cam.value.streams | keyvalue: cameraSvc.compareFn"
                      class="streams-info mat-elevation-z10" mat-table>
