--- a/cloudFrontEnd/src/app/multi-cam-view/multi-cam-view.component.scss
+++ b/cloudFrontEnd/src/app/multi-cam-view/multi-cam-view.component.scss
@@ -93,3 +93,37 @@ tr.mat-row {
 mat-icon {
   font-size: 25px !important;
 }
+
+.enter-animation {
+  opacity: 0;
+  animation: fade-in 0.5s;
+}
+
+.leaving-animation  {
+  opacity: 1;
+  animation: fade-out 0.5s;
+}
+
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
+}
+
+.stream-closed {
+  transform: rotate(0);
+  transition: transform 0.225s;
+}
+
+.stream-open {
+  transform: rotate(90deg);
+  transition: transform 0.225s;
+}
+
